--- a/src/marketing_distribution/config.toml
+++ b/src/marketing_distribution/config.toml
@@ -22,6 +22,6 @@ AWS_ACC_ID = "527257445982"
 AWS_REGION = "us-east-1"
 ROLE_ARN = "arn:aws:iam::527257445982:role/zd-plat-api-role"
 PROTEGRITY = "protegrity_send_cohort"
-S3_ARCHIVE_BUCKET = ""
-S3_ARCHIVE_PREFIX =""
+S3_ARCHIVE_BUCKET = "zipdrug-anthem-sftp-prod"
+S3_ARCHIVE_PREFIX ="production/outbound-marketing/"
 
